--- a/src/app/ejercicio/leer-ejercicio/leer-ejercicio.component.html
+++ b/src/app/ejercicio/leer-ejercicio/leer-ejercicio.component.html
@@ -15,7 +15,7 @@
     <div class="input-group mb-3">
         <div class="form-floating col-10">
             <input type="text" [(ngModel)]="nombre" placeholder="" class="form-control"
-                style="text-transform:uppercase" id="floatingNombre">
+            oninput="this.value = this.value.toUpperCase()" id="floatingNombre">
             <label for="floatingNombre" class="color-label font-bold">Buscar Ejercicio</label>
         </div>
         <button type="button" (click)="consultarPorNombre()" class="btn btn-outline-info col-2 color-button-search"><i
@@ -72,7 +72,7 @@
             <div class="col-12">
                 <div class="form-floating">
                     <input type="text" [(ngModel)]="ejercicioActualizar.nombre"
-                        style="text-transform:uppercase" placeholder="" class="form-control"
+                    oninput="this.value = this.value.toUpperCase()" placeholder="" class="form-control"
                         id="floatingNombre">
                     <label for="floatingNombre" class="font-color font-bold">Nombre</label>
                 </div>
@@ -82,7 +82,7 @@
             <div class="col-12">
                 <div class="form-floating">
                     <input type="text" [(ngModel)]="ejercicioActualizar.nombrePersonalizado"
-                        style="text-transform:uppercase" placeholder="" class="form-control"
+                    oninput="this.value = this.value.toUpperCase()" placeholder="" class="form-control"
                         id="floatingNombrePersonalizado">
                     <label for="floatingNombrePersonalizado" class="font-color font-bold">Nombre Personalizado</label>
                 </div>
@@ -121,7 +121,7 @@
                 </ng-container>
                 <ng-container *ngIf="ejercicioLeer.imagen==''">
                     <textarea rows="3" [disabled]="true" [(ngModel)]="ejercicioLeer.detalle"
-                        style="text-transform:uppercase" class="form-control form-control-sm"></textarea>
+                    oninput="this.value = this.value.toUpperCase()" class="form-control form-control-sm"></textarea>
                 </ng-container>
                 <ng-container *ngIf="ejercicioLeer.imagen!=''">
                     <img class="card-img-top" src="{{host+prefijoUrlEjercicios+ejercicioLeer.imagen}}" height="300px"
