--- a/src/app/plan/leer-plan/leer-plan.component.html
+++ b/src/app/plan/leer-plan/leer-plan.component.html
@@ -119,7 +119,7 @@
                 <ng-container *ngIf="usuario.plan.dias[seleccionPE].rutinas[seleccionRE].ejercicio.imagen==''">
                     <textarea rows="3" [disabled]="true"
                         [(ngModel)]="usuario.plan.dias[seleccionPE].rutinas[seleccionRE].ejercicio.detalle"
-                        style="text-transform:uppercase" class="form-control form-control-sm"></textarea>
+                        oninput="this.value = this.value.toUpperCase()" class="form-control form-control-sm"></textarea>
                 </ng-container>
             </div>
         </div>
